// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabelItems renders empty 1`] = `
<div>
  <div
    class="sc-eJwWfJ bxodHI"
  >
    <h5
      class="sc-jeraig fbVRGV"
    >
      Node Labels
    </h5>
    <div
      class="sc-nVkyK jrdixH"
    >
      <p>
        There are no labels in database
      </p>
    </div>
  </div>
</div>
`;

exports[`LabelItems renders labels 1`] = `
<div>
  <div
    class="sc-eJwWfJ bxodHI"
  >
    <h5
      class="sc-jeraig fbVRGV"
    >
      Node Labels
    </h5>
    <div
      class="sc-nVkyK jrdixH"
    >
      <div
        class="sc-eCImPb sc-jRQBWg iTIdOK CulBm"
        data-testid="sidebarMetaItem"
      >
        *(5)
      </div>
      <div
        class="sc-eCImPb sc-jRQBWg iTIdOK CulBm"
        data-testid="sidebarMetaItem"
      >
        MyLabel
      </div>
      <div
        class="sc-eCImPb sc-jRQBWg iTIdOK CulBm"
        data-testid="sidebarMetaItem"
      >
        MyLabel2
      </div>
    </div>
  </div>
</div>
`;

exports[`PropertyItems renders empty 1`] = `
<div>
  <div
    class="sc-eJwWfJ bxodHI"
  >
    <h5
      class="sc-jeraig fbVRGV"
    >
      Property Keys
    </h5>
    <div
      class="sc-nVkyK jrdixH"
    >
      <p>
        There are no properties in database
      </p>
    </div>
  </div>
</div>
`;

exports[`PropertyItems renders properties 1`] = `
<div>
  <div
    class="sc-eJwWfJ bxodHI"
  >
    <h5
      class="sc-jeraig fbVRGV"
    >
      Property Keys
    </h5>
    <div
      class="sc-nVkyK jrdixH"
    >
      <div
        class="sc-eCImPb sc-iCfMLu iTIdOK dfFAXu"
        data-testid="sidebarMetaItem"
      >
        prop1
      </div>
      <div
        class="sc-eCImPb sc-iCfMLu iTIdOK dfFAXu"
        data-testid="sidebarMetaItem"
      >
        prop2
      </div>
    </div>
  </div>
</div>
`;

exports[`RelationshipItems renders empty 1`] = `
<div>
  <div
    class="sc-eJwWfJ bxodHI"
  >
    <h5
      class="sc-jeraig fbVRGV"
    >
      Relationship Types
    </h5>
    <div
      class="sc-nVkyK jrdixH"
    >
      <p>
        No relationships in database
      </p>
    </div>
  </div>
</div>
`;

exports[`RelationshipItems renders relationshipTypes 1`] = `
<div>
  <div
    class="sc-eJwWfJ bxodHI"
  >
    <h5
      class="sc-jeraig fbVRGV"
    >
      Relationship Types
    </h5>
    <div
      class="sc-nVkyK jrdixH"
    >
      <div
        class="sc-eCImPb sc-gKclnd iTIdOK iWpSfJ"
        data-testid="sidebarMetaItem"
      >
        *(5)
      </div>
      <div
        class="sc-eCImPb sc-gKclnd iTIdOK iWpSfJ"
        data-testid="sidebarMetaItem"
      >
        MY_TYPE
      </div>
      <div
        class="sc-eCImPb sc-gKclnd iTIdOK iWpSfJ"
        data-testid="sidebarMetaItem"
      >
        MY_TYPE2
      </div>
    </div>
  </div>
</div>
`;
